Agregando el campo activo a la tabla Tipo Consentimiento
